crates/rome_js_formatter/tests/specs/prettier/typescript/custom/abstract/abstractProperties.ts.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
---

# Input

```js
abstract class Foo {
    abstract private a: 1;
    private abstract b: 2;
    static abstract c: 3;
    abstract private ['g'];
    private abstract ['h'];
    static abstract ['i'];
}
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,8 +1,8 @@
 abstract class Foo {
-  private abstract a: 1;
+  abstract private a: 1;
   private abstract b: 2;
   static abstract c: 3;
-  private abstract ["g"];
-  private abstract ["h"];
-  static abstract ["i"];
+  abstract private ['g'];
+  private abstract ['h'];
+  static abstract ['i'];
 }
```

# Output

```js
abstract class Foo {
  abstract private a: 1;
  private abstract b: 2;
  static abstract c: 3;
  abstract private ['g'];
  private abstract ['h'];
  static abstract ['i'];
}
```


# Errors
```
error[SyntaxError]: 'private' cannot be used with 'abstract' modifier.
  ┌─ abstractProperties.ts:2:14
  │
2 │     abstract private a: 1;
  │     -------- ^^^^^^^
  │     │         
  │     'abstract' modifier

error[SyntaxError]: 'private' cannot be used with 'abstract' modifier.
  ┌─ abstractProperties.ts:3:5
  │
3 │     private abstract b: 2;
  │     ^^^^^^^ -------- 'abstract' modifier

error[SyntaxError]: 'abstract' cannot be used with 'static' modifier.
  ┌─ abstractProperties.ts:4:12
  │
4 │     static abstract c: 3;
  │     ------ ^^^^^^^^
  │     │       
  │     'static' modifier

error[SyntaxError]: 'private' cannot be used with 'abstract' modifier.
  ┌─ abstractProperties.ts:5:14
  │
5 │     abstract private ['g'];
  │     -------- ^^^^^^^
  │     │         
  │     'abstract' modifier

error[SyntaxError]: 'private' cannot be used with 'abstract' modifier.
  ┌─ abstractProperties.ts:6:5
  │
6 │     private abstract ['h'];
  │     ^^^^^^^ -------- 'abstract' modifier

error[SyntaxError]: 'abstract' cannot be used with 'static' modifier.
  ┌─ abstractProperties.ts:7:12
  │
7 │     static abstract ['i'];
  │     ------ ^^^^^^^^
  │     │       
  │     'static' modifier


```


